@@ -52,7 +52,7 @@ class AccountingCorePresentationViewServiceTest {
     void testAllReconiciliationTransaction_successfulUnprocessed() {
         when(accountingCoreTransactionRepository.findCalcReconciliationStatistic()).thenReturn(new Object[]{0L, 1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L});
         when(transactionReconcilationRepository.findTopByOrderByCreatedAtDesc()).thenReturn(Optional.empty());
-        when(transactionRepositoryGateway.findReconciliation(any(ReconciliationFilterStatusRequest.class), anyInt(), anyInt())).thenReturn(List.of());
+        when(accountingCoreTransactionRepository.findAllReconciliation(any(ReconciliationFilterStatusRequest.class), anyInt(), anyInt())).thenReturn(List.of());
 
         ReconciliationFilterRequest body = mock(ReconciliationFilterRequest.class);
         when(body.getFilter()).thenReturn(ReconciliationFilterStatusRequest.UNPROCESSED);
@@ -75,9 +75,9 @@ class AccountingCorePresentationViewServiceTest {
 
 
         verify(accountingCoreTransactionRepository).findCalcReconciliationStatistic();
-        verify(transactionRepositoryGateway).findReconciliationCount(any(),any(),any());
+        verify(accountingCoreTransactionRepository).findAllReconciliationCount(any(),any(),any());
         verify(transactionReconcilationRepository).findTopByOrderByCreatedAtDesc();
-        verify(transactionRepositoryGateway).findReconciliation(any(ReconciliationFilterStatusRequest.class), anyInt(), anyInt());
+        verify(accountingCoreTransactionRepository).findAllReconciliation(any(ReconciliationFilterStatusRequest.class), anyInt(), anyInt());
         verifyNoMoreInteractions(accountingCoreTransactionRepository, transactionReconcilationRepository, transactionRepositoryGateway);
         verifyNoInteractions(accountingCoreService, transactionBatchRepositoryGateway);
     }
@@ -86,8 +86,8 @@ class AccountingCorePresentationViewServiceTest {
     void testAllReconiciliationTransaction_successfulUnReconciled() {
         when(accountingCoreTransactionRepository.findCalcReconciliationStatistic()).thenReturn(new Object[]{0L, 1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L});
         when(transactionReconcilationRepository.findTopByOrderByCreatedAtDesc()).thenReturn(Optional.empty());
-        when(accountingCoreTransactionRepository.findAllReconciliationSpecial(eq(Set.of()), eq(Optional.empty()), eq(Optional.empty()), eq(Optional.empty()), anyInt(), anyInt())).thenReturn(List.of());
-        when(accountingCoreTransactionRepository.findAllReconciliationSpecialCount(any(),any(), any(), any(), any(),any())).thenReturn(Collections.singletonList(new Object[]{0L}));
+        when(accountingCoreTransactionRepository.findAllReconciliationSpecial(eq(Set.of()), eq(Optional.empty()), eq(Optional.empty()),anyInt(), anyInt())).thenReturn(List.of());
+        when(accountingCoreTransactionRepository.findAllReconciliationSpecialCount(any(),any(), any(), any(), any())).thenReturn(Collections.singletonList(new Object[]{0L}));
 
         ReconciliationFilterRequest body = mock(ReconciliationFilterRequest.class);
         when(body.getFilter()).thenReturn(ReconciliationFilterStatusRequest.UNRECONCILED);
@@ -96,7 +96,7 @@ class AccountingCorePresentationViewServiceTest {
 
         verify(accountingCoreTransactionRepository).findCalcReconciliationStatistic();
         verify(transactionReconcilationRepository).findTopByOrderByCreatedAtDesc();
-        verify(accountingCoreTransactionRepository).findAllReconciliationSpecial(eq(Set.of()), eq(Optional.empty()), eq(Optional.empty()), eq(Optional.empty()), anyInt(), anyInt());
+        verify(accountingCoreTransactionRepository).findAllReconciliationSpecial(eq(Set.of()), eq(Optional.empty()), eq(Optional.empty()), anyInt(), anyInt());
         verifyNoMoreInteractions(accountingCoreTransactionRepository, transactionReconcilationRepository);
         verifyNoInteractions(accountingCoreService, transactionBatchRepositoryGateway, transactionRepositoryGateway);
     }
